<resources>
    <string name="app_name">Trip Tracker</string>

    <!-- Admob -->
    <string name="admob_app_id" translatable="false">ca-app-pub-6372048201484020~2846253835</string>
    <string name="admob_banner_main_activity" translatable="false">ca-app-pub-6372048201484020/4051524299</string>
    <string name="admob_banner_detail_activity" translatable="false">ca-app-pub-6372048201484020/1430790888</string>
    <string name="admob_interstitial_option_menu" translatable="false">ca-app-pub-6372048201484020/4218087391</string>
    <string name="admob_interstitial_detail_export" translatable="false">ca-app-pub-6372048201484020/4270058285</string>

    <!-- Location DB table headers -->
    <string name="table_header_timestamp" translatable="false">timestamp</string>
    <string name="table_header_latitude" translatable="false">latitude</string>
    <string name="table_header_longitude" translatable="false">longitude</string>
    <string name="table_header_altitude" translatable="false">altitude</string>
    <string name="table_header_speed" translatable="false">speed</string>
    <!-- Shared Preferences -->
    <string name="preference_filename" translatable="false">eu.wonderfulme.triptracker.sharedpreference</string>
    <string name="preference_record_period" translatable="false">preference_record_period</string>
    <string name="preference_item_key" translatable="false">preference_item_key</string>
    <string name="preference_parking_location" translatable="false">preference_parking_location</string>
    <string name="preference_nuke_db_checker" translatable="false">preference_nuke_db_checker</string>
    <string name="preference_widget_service_status" translatable="false">preference_widget_service_status</string>
    <string name="preference_widget_route_list" translatable="false">preference_widget_route_list</string>

    <string name="pref_settings_record_type_title">Recording period</string>
    <string name="pref_settings_record_type_key" translatable="false">preference_settings_record_type_key</string>
    <string name="pref_settings_record_type_dialog">Please choose a recording period.</string>
    <string name="pref_settings_record_type_car">Car</string>
    <string name="pref_settings_record_type_bicycle">Bicycle</string>
    <string name="pref_settings_record_type_walk">Walk</string>
    <string name="pref_settings_record_type_custom">custom</string>
    <!-- Notifications -->
    <string name="notification_location_service_title">Recording Location</string>
    <string name="notification_location_service_content">Please remove this notification only from the app itself!</string>
    <!-- Launcher dialog strings -->
    <string name="tv_launcher_dialog_support_text">You can save your parking or open Trip Tracker.</string>
    <string name="btn_launcher_dialog_open_app">OPEN APP</string>
    <!-- Toasts/SnackBars -->
    <string name="toast_parking_saved">Location saved successfully.</string>
    <string name="toast_parking_removed">Location removed successfully.</string>
    <string name="toast_location_permission_denied">Our app main functionality needs location. Please try again and accept the location access.</string>
    <string name="toast_gps_denied">Our app main functionality needs location. Please turn your gps on and try again.</string>
    <string name="toast_google_client_no_connection">Our app main functionality needs Google Services. Please login to you google account.</string>
    <string name="snackBar_put_app_in_background">Now you can put app in background!</string>
    <string name="snackBar_export_csv_successful">Successfully Saved</string>
    <string name="snackBar_export_csv_failed">Export failed. Please try again.</string>
    <string name="snackBar_goto_downloads">Downloads</string>
    <string name="snackBar_remove_succeed">Route has been removed successfully.</string>
    <string name="snackBar_record_finished">Recording location finished.</string>
    <string name="snackBar_write_external_storage_permission_denied">We need to access your device storage to save your file.</string>
    <!-- General -->
    <string name="bulk_route_name" translatable="false">route name temp</string>
    <string name="gps_is_not_on">Your GPS seems to be disabled, do you want to enable it?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="save">Save</string>
    <string name="apply">APPLY</string>
    <string name="cancel">Cancel</string>
    <string name="widget_no_route_available">There is no route available.</string>
    <string name="select_period_hint">Please choose a record period (seconds)</string>
    <string name="welcome_morning">Good Morning</string>
    <string name="welcome_afternoon">Good Afternoon</string>
    <string name="welcome_night">Good Night</string>
    <string name="welcome_evening">Good Evening</string>
    <!-- Alert Dialogs -->
    <string name="alert_remove_route_title">Remove Route</string>
    <string name="alert_remove_route_msg">Are you sure?</string>
    <string name="alert_ask_quit">Quit?</string>
    <string name="alert_ask_quit_msg">Trip Tracker will stop recording your location!</string>
    <!-- Buttons -->
    <string name="btn_save_parking">SAVE PARKING\nLOCATION</string>
    <string name="btn_restore_parking">SHOW PARKING\nLOCATION</string>
    <string name="btn_remove_parking">REMOVE PARKING\nLOCATION</string>
    <string name="btn_main_record_start">Record a Trip</string>
    <string name="btn_main_record_stop">Stop Recording</string>
    <string name="btn_detail_export">Export as CSV</string>
    <string name="btn_detail_remove">REMOVE</string>
    <!-- Actions -->
    <string name="action_setting">Settings</string>
    <string name="action_about">About</string>
    <string name="action_privacy">Privacy Policy</string>

    <!-- About page strings -->
    <string name="about_my_app" translatable="false">Trip Tracker v1.2</string>
    <string name="about_trademark" translatable="false">\u00A9 2018 Mohsen Oghbaei - WonderfulMe.eu</string>
    <string name="about_found_bug" translatable="false">Found a bug? let us know:</string>
    <string name="about_found_bug_email" translatable="false">info@wonderfulme.eu</string>
    <string name="about_app_license" translatable="false">Trip Tracker is released under Apache version 2.0.</string>
    <string name="about_used_library_title" translatable="false">Trip Tracker uses the following open-source libraries:</string>
    <string name="about_openCsv_website" translatable="false"><a href="http://opencsv.sourceforge.net">OpenCSV</a></string>
    <string name="about_opencsv_license" translatable="false"><a href="http://www.apache.org/licenses/LICENSE-2.0">Apache License Version 2.0</a></string>
    <string name="about_flaticon_website" translatable="false"><a href="https://www.flaticon.com/">Flaticon</a></string>
    <string name="about_flaticon_license" translatable="false"><a href="https://www.flaticon.com/authors/vaadin">Icons made by Vaadin</a></string>
    <string name="privacy_failed_to_load">Failed to load privacy policy page!</string>

    <!-- Filename Dialog -->
    <string name="filename_dialog_title">Saving Route</string>
    <string name="filename_dialog_message">Enter a route name</string>

    <!-- Map -->
    <string name="marker_start">Start Point</string>
    <string name="marker_end">End Point</string>

</resources>
