<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AboutActivity">

    <TextView
        android:id="@+id/tv_about_myApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_about_less"
        android:text="@string/about_my_app"
        android:textStyle="bold"
        style="@android:style/TextAppearance.DeviceDefault.Large" />

    <TextView
        android:id="@+id/tv_about_trademark"
        android:layout_margin="@dimen/margin_about_less"
        android:layout_marginBottom="@dimen/margin_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_trademark"
        style="@android:style/TextAppearance.DeviceDefault.Medium" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_about_found_bug"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_about_less"
                    android:text="@string/about_found_bug"
                    style="@android:style/TextAppearance.DeviceDefault.Small" />

                <TextView
                    android:id="@+id/tv_about_found_bug_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_about_less"
                    style="@android:style/TextAppearance.DeviceDefault.Small"
                    android:text="@string/about_found_bug_email" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_about_less"
                android:layout_marginBottom="@dimen/margin_about"
                style="@android:style/TextAppearance.DeviceDefault.Small"
                android:text="@string/about_app_license" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_about_less"
                style="@android:style/TextAppearance.DeviceDefault.Small"
                android:text="@string/about_used_library_title" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_about_openCSV_website"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_about_less"
                    style="@android:style/TextAppearance.DeviceDefault.Small"
                    android:textStyle="bold"
                    android:text="@string/about_openCsv_website" />

                <TextView
                    android:id="@+id/tv_about_openCSV_license"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_about_less"
                    style="@android:style/TextAppearance.DeviceDefault.Small"
                    android:text="@string/about_opencsv_license" />
            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>