<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity"
    android:id="@+id/constraintLayout_mainActivity">

    <Button
        android:id="@+id/btn_main_save_parking"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/btn_main_margin"
        android:text="@string/btn_save_parking"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btn_main_remove_parking"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/horizontal_gl_0_2"
        android:focusable="true"
        android:nextFocusRight="@id/btn_main_remove_parking"
        android:nextFocusDown="@id/btn_main_record"
        android:onClick="onSaveParkingClicked"/>

    <Button
        android:id="@+id/btn_main_remove_parking"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/btn_main_margin"
        android:text="@string/btn_remove_parking"
        app:layout_constraintLeft_toRightOf="@id/btn_main_save_parking"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/horizontal_gl_0_2"
        android:focusable="true"
        android:nextFocusLeft="@id/btn_main_save_parking"
        android:nextFocusDown="@id/btn_main_record"
        android:onClick="onRemoveParkingClicked"/>

    <android.support.constraint.Guideline
        android:id="@+id/horizontal_gl_0_2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2"
        android:focusable="false"/>

    <Button
        android:id="@+id/btn_main_record"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/btn_main_margin"
        android:text="@string/btn_main_record_start"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/horizontal_gl_0_2"
        app:layout_constraintBottom_toTopOf="@id/horizontal_gl_0_4"
        android:focusable="true"
        android:nextFocusUp="@id/btn_main_save_parking"
        android:onClick="onRecordClicked"/>

    <android.support.constraint.Guideline
        android:id="@+id/horizontal_gl_0_4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4"
        android:focusable="false"/>

    <ProgressBar
        android:id="@+id/progressBar_main"
        style="?android:attr/progressBarStyle"
        android:layout_width="@dimen/progressBar_size"
        android:layout_height="@dimen/progressBar_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontal_gl_0_4"
        app:layout_constraintBottom_toBottomOf="parent"
        android:focusable="false"
        android:visibility="gone"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView_routes"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontal_gl_0_4"
        app:layout_constraintBottom_toBottomOf="parent"
        android:focusable="true"
        android:nextFocusUp="@id/btn_main_record" />


</android.support.constraint.ConstraintLayout>